# PollenGuard_Rennes

./: .gitignore  Analyse_explor_modelisation.ipynb  Analyse_exploratoire copy.ipynb  Analyse_exploratoire.ipynb  Analyse_exploratoire_copy.html  Analyse_exploratoire_copy.ipynb  Analyse_exploratoire_copy.qmd  README.md  Rapport_final.ipynb  pyproject.toml  utils.py
Analyse_exploratoire_copy_files/libs/bootstrap/: bootstrap-9aab25a429321095b0bffba01c6fd123.min.css
app/: main.py
models/: features_meteo.pkl  modele_bouleau.pkl  modele_graminees.pkl
