[project]
name = "g4b-acces-equip-medical-france"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fs>=2.4.16",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "osmnx>=2.1.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "s3fs>=2026.3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "xgboost>=3.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
